# Sliver-CPPImplant2

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  compile.bat  deploy_compile.bat  sign.ps1
Include/: Beacon.h  CipherContext.h  Client.h  Connection.h  CryptoUtils.h  Handlers.h  Handlers_Utils.h  MemoryModule.h  Os.h  PivotConn.h  ReadersWriterLock.h  Sliver-CPPImplant.h  Sliver-CPPImplant2.h  Token.h  Utils.h  base64_utils.h  common.pb.h  constants.h  encoders.h  evasion.h  executeAssembly.h  extensions.h  filesystem.h  globals.h  listeners.h  my_time.h  pivots.h  processes.h  sliver.pb.h  taskRunner.h  tsmap.h  tunnels.h
libs/: libsodium.lib
src/: Base64.cpp  Beacon.cpp  CipherContext.cpp  CryptoUtils.cpp  Encoders.cpp  ExecuteAssembly.cpp  Handlers_Utils.cpp  HttpClient.cpp  MemoryModule.cpp  NamedPipeClient.cpp  NamedPipeConn.cpp  NamedPipeListener.cpp  Os.cpp  Pivots.cpp  Sliver-CPPImplant.cpp  Sliver-CPPImplant2.cpp  TCPClient.cpp  TCPConn.cpp  TCPListener.cpp  Token.cpp  Utils.cpp  common.pb.cc  common.proto  constants.cpp  evasion.cpp  execute.cpp  extensions.cpp  filesystem.cpp  globals.cpp  pivotHandlers.cpp  processes.cpp  sliver.pb.cc  sliver.proto  systemHandlers.cpp  tunnelHandlers.cpp
